# snapboard

./: README.md  dump-front.sh  dump-tauri.sh  frontend-dump.txt  package-lock.json  package.json  src-tauri-dump.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_create_clipboard-items.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: setup.rs
src-tauri/src/commands/: app.rs  items.rs  mod.rs  overlay.rs
src-tauri/src/config/windows/: overlay.rs
src-tauri/src/db/: cleanup.rs  init.rs  mod.rs  utils.rs
src-tauri/src/listeners/: clipboard.rs  hotkeys.rs  mod.rs
src-tauri/src/models/: clipboard_item.rs  mod.rs
src-tauri/src/plugins/: autostart.rs
src-tauri/src/repositories/: clipboard_item.rs
src-tauri/src/state/: app_state.rs  clipboard_state.rs  database_state.rs  mod.rs
src-tauri/src/state/windows/: mod.rs
src-tauri/src/tray/: tray.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/windows/: overlay.rs
src/components/button/: button.css  button.tsx
src/components/clipboard/: clipboardCard.tsx  clipboardCardSkeleton.tsx
src/components/kind-types/: kind-filter.tsx
src/components/overlay/: overlay.module.css  overlayView.tsx
src/contexts/: overlayContext.tsx
src/hooks/: useClipboardItems.ts  useClipboardNavigation.ts  useKindTypes.ts
src/styles/: App.css
src/types/: clipboardItem.ts  iconTypes.ts
src/utlis/: date.ts  icons.tsx  keyboard.ts
