[package]
name = "snapboard"
version = "0.1.0"
description = "Application to easily manage your clipboard and screenshots on macos devices"
authors = ["Eduardo Marcelino"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "snapboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-global-shortcut = "2"
global-hotkey = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1.8", features = ["v4"] }
arboard = "3.4"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }
tokio = { version = "1", features = ["sync"] }
regex = "1.10.0"










